2.1.3 (unreleased)
------------------
- Change version from using pkg_resources and set it in package __init__.py (#98)


2.1.2 (unreleased)
------------------

- Add saving of JSON metadata grabbed from pypi.facebook.com for syncing (#91)
-- Can be disabled via config and disabled by default
-- bandersnatch symlinks WEB_ROOT/pypi/PKG_NAME/json to WEB_ROOT/json/PKG_NAME


2.1.0 (unreleased)
------------------

- Fix proxy usage. A bug in the usage of requests on our XMLRPC client
  caused this to break. You can now set *_proxy environment variables
  and get them picked up properly. Fixes #59.

- Add a dict returned from mirror.synchronize() to show deleted
  and added files from the last run

- Fix sorting of releases to use filename and not url

- Tweak atomic file writes in utils.rewrite() to prefix the temporary
  file with the 'hidden' filename of the destination adding more
  support for hashed POSIX filesystems like GlusterFS.


2.0.0 (2017-04-05)
------------------

- Move to Python 3.

  Official support starts with Python 3.5 but might get away with using an
  earlier version of Python 3 (maybe 3.3 or so). However, we plan to start
  using Python 3.5 features (like asyncio) in the near future, so please
  be advised that running with an older version of Python 3 is not
  a supported option for the long term.

- General update of our dependencies to pave the road for Python 3 support.

- Remove residual references to the old "statistics" script that isn't in
  use any longer.

- Fix return code -- we accidentally returned 1 on successful runs
  as debugging code was mixed in the main call. Fixes #67.

- Make the package-specific simple pages human-readable again. Fixes #71.


1.11 (2016-05-18)
-----------------

- Add option to dir-hash index files. See
  https://bitbucket.org/pypa/bandersnatch/pull-requests/22/add-option-to-dir-hash-index-files for a lot more information. Thanks
  @iwienand!
