@@ -53,4 +53,11 @@ delete-packages = true
 ; python logging format logging config file.
 ; log-config = /etc/bandersnatch-log.conf
 
+; blacklist
+; List of PyPI packages not to sync - Useful if malicious packages are mirrored
+[blacklist]
+packages =
+  example1
+  example2
+
 ; vim: set ft=cfg:
